@@ -11,7 +11,7 @@
             "role": "lead"
         }
     ],
-    "time": "2022-08-25",
+    "time": "2022-11-04",
     "repositories": [
         {
             "type": "composer",
@@ -49,6 +49,5 @@
         "allow-plugins": {
             "horde/horde-installer-plugin": true
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
